--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <nav class="navbar">
         <div id="navbar-container">
-            <h1 class="logo">Energia <span>.Sun</span></h1>
+            <h1 class="logo">Energia <span>.sun</span></h1>
             <ul id="navbar-items">
                 <li><a href="/sobre.html" class="items">Energia solar</a></li>
                 <li><a href="/contato.html" class="items">Encontre-nos</a></li>
@@ -84,11 +84,11 @@
     <section class="gallery">
         <div class="headline">Veja alguns de nossos projetos</div>
         <div class="gallery-container">
-            <img src="/img/placa-1.jfif" alt="" class="gallery-image">
-            <img src="/img/placa-2.jfif" alt="" class="gallery-image">
-            <img src="/img/placa-3.jfif" alt="" class="gallery-image">
-            <img src="/img/placa-4.jfif" alt="" class="gallery-image">
-            <img src="/img/placa-5.jfif" alt="" class="gallery-image">
+            <img src="/img/placa-1.jpg" alt="" class="gallery-image">
+            <img src="/img/placa-2.webp" alt="" class="gallery-image">
+            <img src="/img/placa-3.webp" alt="" class="gallery-image">
+            <img src="/img/placa-4.jpg" alt="" class="gallery-image">
+            <img src="/img/placa-5.jpg" alt="" class="gallery-image">
             <img src="/img/placa-6.jfif" alt="" class="gallery-image">
             <img src="/img/placa-7.jpg" alt="" class="gallery-image">
             <img src="/img/placa-8.jpg" alt="" class="gallery-image">
@@ -100,5 +100,6 @@
         <p>Site desenvolvido para o curso de criação de sites, dirigido pelo Profº Helder Palharini</p>
     </footer>
 
+    <script src="index.js"></script>
 </body>
 </html>
