--- a/sobre.html
+++ b/sobre.html
@@ -32,7 +32,7 @@
         <h1>Tipos de energia solar</h1>
         <hr>
         <p>A energia solar pode ser usada na produção de energia elétrica por meio de dois sistemas: heliotérmico e fotovoltaico.</p><br>
-        <p><b>Energia solar fotovoltaica:</b><br>
+        <p id="placas"><b>Energia solar fotovoltaica:</b><br>
             Energia solar fotovoltaica nada mais é do que a conversão direta da radiação solar em energia elétrica. Essa conversão é realizada pelas chamadas células fotovoltaicas, compostas por material semicondutor, normalmente o silício. Ao incidir sobre as células, a luz solar provoca a movimentação dos elétrons do material condutor, transportando-os pelo material até serem captados por um campo elétrico (formado por uma diferença de potencial existente entre os semicondutores). Dessa forma, gera-se eletricidade.<br>
             <img src="/img/fotovoltaica-img.jpg" id="img-energia1" alt=""><br><br>
             Constituído por painéis, módulos e equipamentos elétricos, o sistema fotovoltaico não exige um ambiente com alta radiação para funcionar. No entanto, a quantidade de energia produzida depende da densidade das nuvens, ou seja, quanto menos nuvens houver no céu, maior será a produção de eletricidade.      
@@ -55,6 +55,7 @@
             </div>
                <br>
                <h1>Energia Solar no Brasil</h1>
+               <hr>
 
                <p>O Brasil foi o primeiro país subdesenvolvido a fabricar células fotovoltaicas. Por estar localizado próximo à Linha do Equador, uma região de alta incidência solar, o país conta com um cenário extremamente favorável para a geração energética a partir da energia solar. Além disso, é abundante em silício, matéria-prima usada para fabricação das células fotovoltaicas.</p><br>
 
