--- a/contato.html
+++ b/contato.html
@@ -14,7 +14,7 @@
             <ul id="navbar-items">
                 <li>
                     <a href="/index.html">inicio</a>
-                    <a href="/sobre.html">inicio</a>
+                    <a href="/sobre.html">Energia Solar</a>
                 </li>
             </ul>
         </div>
@@ -26,19 +26,21 @@
 
     <section class="local">
         <div class="localizacao">
-            <div>
-                <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3466.479140220042!2d-51.08930758489342!3d-29.676885282017565!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x951941659bd68517%3A0x5b8c455008df9173!2sJCLK%20Eletro!5e0!3m2!1spt-BR!2sbr!4v1670187456955!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <div id="map">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3466.479140220042!2d-51.08930758489342!3d-29.676885282017565!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x951941659bd68517%3A0x5b8c455008df9173!2sJCLK%20Eletro!5e0!3m2!1spt-BR!2sbr!4v1670187456955!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
                 <div class="info">
                     <div id="info-container">
                         <h3>Endereço</h3>
                 <br>
                 <p><img src="/img/pin-de-localizacao.png" class="img-info" alt="">  R. Rodolfo Hexel, 139 - Imigrante, Campo Bom - RS, 93700-000</p>
+                <hr>
                 <h3>Horários</h3>
                 <br>
                 <p><img src="/img/clock.png" class="img-info" alt="">  De Segunda a Sexta</p>
                 <p>08:30 - 11:30</p>            
                 <p>13:00 - 17:30</p>
+                <hr>
                 <h3>Telefone</h3>
                 <br>
                 <p><img src="/img/telephone.png" class="img-info" alt="">  (51) 9 9363-6269</p>
