--- a/sobre.html
+++ b/sobre.html
@@ -32,13 +32,13 @@
         <h1>Tipos de energia solar</h1>
         <hr>
         <p>A energia solar pode ser usada na produção de energia elétrica por meio de dois sistemas: heliotérmico e fotovoltaico.</p><br>
-        <p id="placas"><b>Energia solar fotovoltaica:</b><br>
+        <p><b>Energia solar fotovoltaica:</b><br>
             Energia solar fotovoltaica nada mais é do que a conversão direta da radiação solar em energia elétrica. Essa conversão é realizada pelas chamadas células fotovoltaicas, compostas por material semicondutor, normalmente o silício. Ao incidir sobre as células, a luz solar provoca a movimentação dos elétrons do material condutor, transportando-os pelo material até serem captados por um campo elétrico (formado por uma diferença de potencial existente entre os semicondutores). Dessa forma, gera-se eletricidade.<br>
-            <img src="/img/fotovoltaica-img.jpg" id="img-energia1" alt=""><br><br>
+            <br><div id="img-energia1"><img src="/img/fotovoltaica-img.jpg" alt=""><br><br></div>
             Constituído por painéis, módulos e equipamentos elétricos, o sistema fotovoltaico não exige um ambiente com alta radiação para funcionar. No entanto, a quantidade de energia produzida depende da densidade das nuvens, ou seja, quanto menos nuvens houver no céu, maior será a produção de eletricidade.      
             <br> Essa forma de obtenção de energia, uma das mais promissoras atualmente, vem crescendo cada vez mais em virtude da redução dos preços e dos incentivos oferecidos para que os países adotem fontes renováveis de energia.</p>
             <br><p><b>Energia Heliotérmica:</b><br>No sistema heliotérmico, a energia proveniente do Sol é transformada em calor, aquecendo, principalmente, a água de residências, hotéis e clubes. Para que isso seja possível, são utilizados painéis solares (espelhos, coletores, helióstatos), que refletem a luz solar, concentrando-a em um único ponto no qual há um receptor.
-               <br><br><img src="/img/heliotermica-img.jpg" id="img-energia2" alt=""><br><br> O receptor é constituído por um líquido, que é aquecido pela luz solar refletida nos painéis. Esse líquido é responsável pelo armazenamento de calor, aquecendo a água nas usinas e, assim, produzindo vapor. Esse vapor movimenta as turbinas nas usinas, provocando o acionamento de geradores, que produzem energia elétrica.
+               <br><br><div id="img-energia2"><img src="/img/heliotermica-img.jpg" alt=""></div><br><br> O receptor é constituído por um líquido, que é aquecido pela luz solar refletida nos painéis. Esse líquido é responsável pelo armazenamento de calor, aquecendo a água nas usinas e, assim, produzindo vapor. Esse vapor movimenta as turbinas nas usinas, provocando o acionamento de geradores, que produzem energia elétrica.
                <br><br> Regiões com grande incidência solar, poucas nuvens e terrenos planos são próprias para produção de energia solar heliotérmica. No Brasil, as regiões Nordeste, Centro-Oeste e Sudeste destacam-se na produção desse tipo de energia solar.</p><br>
                <hr>
                <br>
@@ -50,8 +50,8 @@
 
                
                <p>Fonte renovável e inesgotável de energia, não poluente, exige pouca manutenção em suas centrais de produção, paineis solares cada vez mais eficientes e com custos cada vez mais baixos. <br> Fonte de energia viável para lugares afastados e de difícil acesso, visto que não necessita de grandes investimentos na manutenção de equipamentos, excelente fonte de energia para países tropicais, como o Brasil, cuja radiação solar costuma ser intensa durante boa parte do ano e requer áreas menos extensas para ser produzida.</p>
-               <div id="img-planta">
-               <img src="/img/img-energiasol" alt="">
+               <br><div id="img-planta">
+               <img src="/img/img-energiasol.jpeg" alt="">
             </div>
                <br>
                <h1>Energia Solar no Brasil</h1>
@@ -66,7 +66,7 @@
                <p>Outro projeto é o SMILE (Sistema Solar Híbrido com Microturbina para Geração de Eletricidade e Cogeração de Calor na Agroindústria), cujo objetivo é construir duas usinas solares para geração de eletricidade integrada às atividades agroindustriais. A previsão é que seja construída uma usina em Pirassununga, no estado São Paulo, e outra em Caiçara do Rio do Vento, no Rio Grande do Norte.</p><br>
 
                <p>Apesar disso, os custos para geração de energia solar ainda são bastante elevados se comparados a outras fontes de energia, como a hidráulica e os combustíveis fósseis. A instalação de um sistema de energia solar no Brasil custa cerca de 3,5 mil euros por kWp (quilo-watt pico). O elevado custo de instalação, somado à falta de informação a respeito da efetividade dos painéis fotovoltaicos, explica o fato de a energia solar ainda não ter alcançado boa parte das residências, estabelecimentos e indústrias no Brasil. Sendo assim, o país ainda não se configura entre os líderes na produção e no uso de energia solar.</p><br>
-               <div id="img-brasil"><img src="/img/img-brasil" alt="">
+               <div id="img-brasil"><img src="/img/img-brasil.jpeg" alt="">
             </div>
         </div>
     </section>
