--- a/sobre.html
+++ b/sobre.html
@@ -24,21 +24,21 @@
     <section>
         <div class="sobre-energia">
         <h1>O que é Energia Solar:</h1>
-        <hr>
+        <hr><br>
         <p>Energia solar corresponde à energia proveniente da luz e do calor emitidos pelo Sol. Essa fonte de energia pode ser aproveitada de forma fotovoltaica ou térmica, gerando energia elétrica e térmica, respectivamente. Por ser considerada uma fonte de energia limpa, a energia solar é uma das fontes alternativas mais promissoras para obtenção energética.</p><br>
         <h1>Como funciona a energia solar?</h1>
-        <hr>
-        <p>A energia solar, como o próprio nome indica, refere-se à energia cuja fonte é o Sol. Sua captação pode ser feita por meio de diversas tecnologias, como painéis fotovoltaicos, usinas heliotérmicas e aquecedores solares.Basicamente, ao ser captada, a luz solar é convertida em energia. Nos painéis fotovoltaicos e nas usinas heliotérmicas, a luz solar é convertida em energia elétrica e térmica. Já no aquecimento solar, a luz solar é convertida em energia térmica.</p>
+        <hr><br>
+        <p>A energia solar, como o próprio nome indica, refere-se à energia cuja fonte é o Sol. Sua captação pode ser feita por meio de diversas tecnologias, como painéis fotovoltaicos, usinas heliotérmicas e aquecedores solares. Basicamente, ao ser captada, a luz solar é convertida em energia. Nos painéis fotovoltaicos e nas usinas heliotérmicas, a luz solar é convertida em energia elétrica e térmica. Já no aquecimento solar, a luz solar é convertida em energia térmica.</p>
         <h1>Tipos de energia solar</h1>
-        <hr>
-        <p>A energia solar pode ser usada na produção de energia elétrica por meio de dois sistemas: heliotérmico e fotovoltaico.</p><br>
+        <hr><br>
+        <p>A energia solar pode ser usada na produção de energia elétrica por meio de dois sistemas: heliotérmico e fotovoltaico.</p>
         <p><b>Energia solar fotovoltaica:</b><br>
-            Energia solar fotovoltaica nada mais é do que a conversão direta da radiação solar em energia elétrica. Essa conversão é realizada pelas chamadas células fotovoltaicas, compostas por material semicondutor, normalmente o silício. Ao incidir sobre as células, a luz solar provoca a movimentação dos elétrons do material condutor, transportando-os pelo material até serem captados por um campo elétrico (formado por uma diferença de potencial existente entre os semicondutores). Dessa forma, gera-se eletricidade.<br>
-            <br><div id="img-energia1"><img src="/img/fotovoltaica-img.jpg" alt=""><br><br></div>
+            <p>Energia solar fotovoltaica nada mais é do que a conversão direta da radiação solar em energia elétrica. Essa conversão é realizada pelas chamadas células fotovoltaicas, compostas por material semicondutor, normalmente o silício. Ao incidir sobre as células, a luz solar provoca a movimentação dos elétrons do material condutor, transportando-os pelo material até serem captados por um campo elétrico (formado por uma diferença de potencial existente entre os semicondutores). Dessa forma, gera-se eletricidade.<br></p>
+            <br><div id="img-energia1"><img src="/img/fotovoltaica-img.jpg" alt=""></div><br>
             <p>Constituído por painéis, módulos e equipamentos elétricos, o sistema fotovoltaico não exige um ambiente com alta radiação para funcionar. No entanto, a quantidade de energia produzida depende da densidade das nuvens, ou seja, quanto menos nuvens houver no céu, maior será a produção de eletricidade.</p>      
             <p>Essa forma de obtenção de energia, uma das mais promissoras atualmente, vem crescendo cada vez mais em virtude da redução dos preços e dos incentivos oferecidos para que os países adotem fontes renováveis de energia.</p>
             <br><p><b>Energia Heliotérmica:</b><br>No sistema heliotérmico, a energia proveniente do Sol é transformada em calor, aquecendo, principalmente, a água de residências, hotéis e clubes. Para que isso seja possível, são utilizados painéis solares (espelhos, coletores, helióstatos), que refletem a luz solar, concentrando-a em um único ponto no qual há um receptor.
-               <br><br><div id="img-energia2"><img src="/img/heliotermica-img.jpg" alt=""></div><br><br> O receptor é constituído por um líquido, que é aquecido pela luz solar refletida nos painéis. Esse líquido é responsável pelo armazenamento de calor, aquecendo a água nas usinas e, assim, produzindo vapor. Esse vapor movimenta as turbinas nas usinas, provocando o acionamento de geradores, que produzem energia elétrica.
+               <br><br><div id="img-energia2"><img src="/img/heliotermica-img.jpg" alt=""></div><br><br> <p>O receptor é constituído por um líquido, que é aquecido pela luz solar refletida nos painéis. Esse líquido é responsável pelo armazenamento de calor, aquecendo a água nas usinas e, assim, produzindo vapor. Esse vapor movimenta as turbinas nas usinas, provocando o acionamento de geradores, que produzem energia elétrica.
                <br><br> Regiões com grande incidência solar, poucas nuvens e terrenos planos são próprias para produção de energia solar heliotérmica. No Brasil, as regiões Nordeste, Centro-Oeste e Sudeste destacam-se na produção desse tipo de energia solar.</p><br>
                <hr>
                <br>
@@ -46,7 +46,7 @@
                <br> Quando o assunto é uso de energia solar, a China aparece como líder no ranking de países que investem nesse setor, representando cerca de 26% das instalações de energia solar do mundo. Países como Estados Unidos e Japão também se destacam, cada um representando, aproximadamente, 13% da produção.</p>
                <br><br>
                <h1>Principais vantagens</h1>
-               <hr>
+               <hr><br>
 
                
                <p>Fonte renovável e inesgotável de energia, não poluente, exige pouca manutenção em suas centrais de produção, paineis solares cada vez mais eficientes e com custos cada vez mais baixos. <br> Fonte de energia viável para lugares afastados e de difícil acesso, visto que não necessita de grandes investimentos na manutenção de equipamentos, excelente fonte de energia para países tropicais, como o Brasil, cuja radiação solar costuma ser intensa durante boa parte do ano e requer áreas menos extensas para ser produzida.</p>
@@ -55,7 +55,7 @@
             </div>
                <br>
                <h1>Energia Solar no Brasil</h1>
-               <hr>
+               <hr><br>
 
                <p>O Brasil foi o primeiro país subdesenvolvido a fabricar células fotovoltaicas. Por estar localizado próximo à Linha do Equador, uma região de alta incidência solar, o país conta com um cenário extremamente favorável para a geração energética a partir da energia solar. Além disso, é abundante em silício, matéria-prima usada para fabricação das células fotovoltaicas.</p><br>
 
